--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-upload-client": "^11.0.0",
     "bootstrap": "^4.3.1",
     "card-validator": "^6.2.0",
+    "classnames": "^2.2.6",
     "date-fns": "^2.1.0",
     "formik": "^1.5.7",
     "graphql": "^14.4.2",
@@ -43,7 +44,6 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-simple-timefield": "^2.0.3",
-    "react-star-rating-component": "^1.4.1",
     "react-to-print": "^2.4.0",
     "react-toastify": "^5.3.2",
     "redux": "^4.0.1",
