--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && node postbuild.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook",
