--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-helmet": "^5.2.1",
     "react-images": "^1.0.0",
     "react-modal-video": "^1.2.2",
+    "react-phone-number-input": "^2.4.1",
     "react-places-autocomplete": "^7.2.1",
     "react-popper": "^1.3.4",
     "react-pose": "^4.0.8",
