--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "path": "^0.12.7",
     "pluralize": "^8.0.0",
     "prop-types": "^15.7.2",
+    "rc-progress": "^2.5.2",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
     "react-addons-update": "^15.6.2",
