--- a/package.json
+++ b/package.json
@@ -9,23 +9,18 @@
     "apollo-link-context": "~1.0.18",
     "apollo-link-http": "~1.5.15",
     "apollo-upload-client": "~11.0.0",
-    "bootstrap": "~4.3.1",
     "card-validator": "~6.2.0",
-    "classnames": "~2.2.6",
     "date-fns": "~2.1.0",
     "formik": "~1.5.7",
     "graphql": "~14.4.2",
     "immutability-helper": "~3.0.1",
-    "js-cookie": "~2.2.0",
     "lodash": "~4.17.15",
     "numeral": "~2.0.6",
-    "path": "~0.12.7",
     "pluralize": "~8.0.0",
     "prop-types": "~15.7.2",
     "rc-slider": "~8.6.13",
     "react": "~16.8.6",
     "react-addons-update": "~15.6.2",
-    "react-apollo": "~2.5.8",
     "react-bootstrap": "~1.0.0-beta.9",
     "react-credit-cards": "~0.7.0",
     "react-day-picker": "~7.3.0",
@@ -39,25 +34,23 @@
     "react-modal-video": "~1.2.2",
     "react-phone-number-input": "~2.4.1",
     "react-places-autocomplete": "~7.2.1",
-    "react-popper": "~1.3.4",
-    "react-pose": "~4.0.8",
+    "react-popper": "~1.3.6",
     "react-redux": "~7.1.0",
     "react-router-dom": "~5.0.1",
     "react-scripts": "3.0.1",
     "react-simple-timefield": "~2.0.3",
-    "react-to-print": "~2.4.0",
+    "react-to-print": "~2.5.0",
     "react-toastify": "~5.3.2",
     "redux": "~4.0.1",
     "redux-logger": "~3.0.6",
     "redux-thunk": "~2.3.0",
-    "reselect": "~4.0.0",
     "styled-components": "~4.3.2",
     "styled-system": "~5.0.15",
     "yup": "~0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && node postbuild.js",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook",
@@ -83,7 +76,6 @@
     "eslint-config-airbnb": "~17.1.1",
     "eslint-config-prettier": "~6.0.0",
     "eslint-plugin-prettier": "~3.1.0",
-    "prettier": "~1.18.2",
-    "redux-devtools": "~3.5.0"
+    "prettier": "~1.18.2"
   }
 }
