Removing redux logger from production.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - run:
           name: 'Build app'
           command:
-            NODE_ENV=production REACT_APP_ENV=production REACT_APP_GOOGLE_MAPS_KEY=${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
+            NODE_ENV=development REACT_APP_ENV=development REACT_APP_GOOGLE_MAPS_KEY=${SANDPIT_REACT_APP_GOOGLE_MAPS_KEY}
             GENERATE_SOURCEMAP=false INLINE_RUNTIME_CHUNK=false REACT_APP_LEGACY=${SANDPIT_REACT_APP_LEGACY}
             REACT_APP_GRAPH_HOST=${SANDPIT_REACT_APP_GRAPH_HOST} REACT_APP_STATIC_PAGES=https://app.sandpit.cloud.spacenow.com/search
             REACT_APP_GOOGLE_APP_ID=${SANDPIT_REACT_APP_GOOGLE_APP_ID} REACT_APP_FACEBOOK_APP_ID=${SANDPIT_REACT_APP_FACEBOOK_APP_ID}
