--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@styled-system/prop-types": "~5.0.15",
     "apollo-boost": "~0.4.3",
     "apollo-client-preset": "~1.0.8",
+    "apollo-link": "~1.2.13",
     "apollo-link-context": "~1.0.18",
     "apollo-link-http": "~1.5.15",
     "apollo-upload-client": "~11.0.0",
