--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "apollo-upload-client": "~11.0.0",
     "card-validator": "~6.2.0",
     "date-fns": "~2.1.0",
+    "draft-js": "^0.11.3",
+    "draft-js-export-html": "^1.4.1",
     "formik": "~1.5.7",
     "graphql": "~14.4.2",
     "immutability-helper": "~3.0.1",
@@ -26,6 +28,7 @@
     "react-credit-cards": "~0.7.0",
     "react-day-picker": "~7.3.0",
     "react-dom": "~16.8.6",
+    "react-draft-wysiwyg": "^1.14.0",
     "react-dropzone": "~10.1.6",
     "react-facebook-login": "~4.1.1",
     "react-google-login": "~5.0.5",
