Updating env file example.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-PORT=3003
 NODE_ENV=development
+PORT=3003
+HTTPS=false
+REACT_APP_DOMAIN=localhost
+GENERATE_SOURCEMAP=true
+INLINE_RUNTIME_CHUNK=false
+GOOGLE_MAP_API=
 REACT_APP_GOOGLE_MAPS_KEY=
-REACT_APP_GRAPH_HOST=
-REACT_APP_LEGACY=
+REACT_APP_GRAPH_HOST=http://localhost:4000
+REACT_APP_LEGACY=http://localhost:3001
+REACT_APP_FACEBOOK_APP_ID=
+REACT_APP_GOOGLE_APP_ID=""
+REACT_APP_STATIC_PAGES=http://localhost:3003/search
+REACT_APP_ASSETS_API_HOST=http://localhost:6008/search/images
